--- a/combined/Makefile
+++ b/combined/Makefile
@@ -3,12 +3,12 @@ MPICC = mpicc.mpich
 OMPFLAGS = -fopenmp
 OMPLIBS = -lgomp
 
-CFLAGS = -g -std=gnu99 -I. -Wall $(OMPFLAGS)
+CFLAGS = -g -std=gnu99 -I. -I../omp -I../mpi -Wall $(OMPFLAGS)
 LDLIBS = $(OMPLIBS) -lm
 
 all: combined 
 
-SRCS := $(wildcard *.c)
+SRCS := harness.c combined.c ../omp/gtmp1.c ../mpi/gtmpi2.c
 OBJS = $(SRCS:.c=.o)
 
 %.o: %.c
@@ -18,5 +18,5 @@ combined: $(OBJS)
 	$(MPICC) -o $@ $(CFLAGS) $(LDFLAGS) $^ $(LDLIBS)
 
 clean:
-	rm -rf *.o *.dSYM combined
+	rm -rf *.o ../omp/*.o ../mpi/*.o *.dSYM combined
 
